--- a/VRChat/13/992013.html
+++ b/VRChat/13/992013.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "dPzx3gMuMdpIz7ZV5gBMagFAVb9W5F+V6+frjcQplqs="></script>
+    "i869vRzIFseyB/sYYrvSSrOb6sqUTVUpKulGBjrlbxY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル３Dモデル「ソーラス」Ver2.3 +ソーラスVer Hallowe'en+ソーラスVer X'mas+ソーラスVer NewYear+ソーラスVer Valentine","description":"超蔟式オリジナルモデルとしてThoraxことソーラスちゃんを販売します。\nメカ娘が欲しいあなたに。\n\nVRChat想定で制作されていますが配信、ゲームコンテンツなどに収益化状態を問わず運用可能です。\n\nVRCでのフルトラッキング、加えてDynamic Bornに対応しました。まだ此方で項目の把握がしきれていないので今後とも更新予定あり。\n\nMMDモーションのスムーズなUnity移植に対応、搭載モーフにはMMDで一般的に用いられるものも多く含まれているため表情もしっかり対応します。\n\n改変及び商用利用も可能。\n素体、パーツを他のアバターへ使用することも許可しています。\n\nただしソーラスとその付属の\nモデル、テクスチャーの再配布、販売は改変の有無を問わず禁止です。\n特定個人や団体への中傷を目的とした利用も当然ながら禁止します。\n\n詳しくは後述の利用規約を参照。\n\n\n\n10/29よりソーラスちゃんハロウィン仕様を追加しました。\n此方にも同梱してありますが、もし気に入っていただければ別売版を購入していただければ幸いです。\nhttps://tyosokuhouse.booth.pm/items/1030706\n　\n12/30より新年向け振袖版を追加しました。\n着物柄は商用利用可能な素材を利用していますのでPsd側では削除させていただきました。\n素材元　http://borbone.info/\n\n2/5よりバレンタイン版を追加しました。アーガイル柄は商用可の素材を利用しています。","url":"https://booth.pm/ja/items/992013","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2400"},"image":"https://booth.pximg.net/c/620x620/64446b0b-9225-4dba-a979-4708b93cc2ef/i/992013/702a6677-bdfd-432f-bd2b-942a00ffff16_base_resized.jpg"}
     </script>
@@ -86,16 +86,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="dPzx3gMuMdpIz7ZV5gBMagFAVb9W5F+V6+frjcQplqs="></script>
+    nonce="i869vRzIFseyB/sYYrvSSrOb6sqUTVUpKulGBjrlbxY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -133,7 +132,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -176,7 +176,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/992013/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               320
@@ -191,14 +191,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/992013/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               320
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
