--- a/VRChat/54/988954.html
+++ b/VRChat/54/988954.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "3+hdppm/0B2Y12Gq98c/JR1K6HKJfo4fFxVYls4BW38="></script>
+    "n5f7+ORPI9yXO9nJ7MpaC5c4HjAuiWoHFrlcujbXqgc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル 土偶","description":"3Dモデル 土偶　紹介文\n\nこの商品は遮光器土偶をモデルに作成した3Dモデルです。\nボーンが入っているのでこのままVRChatのアバターとしても使用できます。\n\n△8140ポリゴン、テクスチャ同梱。\n\n＜利用規約＞\n\n本モデルを使用したことによって生じるいかなる損害に対して等方は一切責任を負いません。\n条件についての内容は予告なく変更する場合があります。\n\n非改変での再配布、再販売は禁止。また他人への差別行為には使用しないでください。まぁこれ以外は大体自由です。\n\n●内容物\n\n・fbxファイル \"clay_doll.fbx\"\n・テクスチャ \"doguu_skin.png\"\n\nまたこれらのデータはzip形式で圧縮してあります。","url":"https://booth.pm/ja/items/988954","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/8f9f026a-3963-4972-9b28-0d458c4521ab/i/988954/b1cf2a75-be37-45df-ad73-1cc9420e4577_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="3+hdppm/0B2Y12Gq98c/JR1K6HKJfo4fFxVYls4BW38="></script>
+    nonce="n5f7+ORPI9yXO9nJ7MpaC5c4HjAuiWoHFrlcujbXqgc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/988954/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               55
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/988954/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               55
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
