--- a/VRChat/96/987296.html
+++ b/VRChat/96/987296.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "7qH///RHj+KMt0IMCzmEhe1wMz/m43kza/hR8og2X+c="></script>
+    "a+Fm5dQXcI8UccNKOtSyQEQ7hKaY89KQm185knORTpk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】Shaclo -シャーロ- + RAY MUFFLER -レイマフラー-【PhysBones対応】","description":"【3Dモデル】Shaclo -シャーロ- + RAY MUFFLER -レイマフラー-【PhysBones対応】","url":"https://booth.pm/ja/items/987296","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/aca730df-46b8-404d-b7cd-6d73723845a4/i/987296/107dfb55-98c3-435e-a4d2-372489da17ca_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7qH///RHj+KMt0IMCzmEhe1wMz/m43kza/hR8og2X+c="></script>
+    nonce="a+Fm5dQXcI8UccNKOtSyQEQ7hKaY89KQm185knORTpk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -160,10 +162,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/987296/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              3887
+                              3890
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -175,14 +177,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/987296/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              3887
+                              3890
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
