--- a/VRChat/13/987813.html
+++ b/VRChat/13/987813.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "5IHIRqnedr5ilaVGfCsqkTX9eV4PMF61U0SAO/Az7jI="></script>
+    "a8iE6ZxiJSuhZAVPaC888ZZk44GUMePi4js5r2FN7o8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat想定3Dモデル「ラミアさん」【バーチャルマーケット】","description":"VRChat想定3Dモデル「ラミアさん」【バーチャルマーケット】\n\nVRChatでの利用を想定した3Dモデルです。\nUnitypackageを同梱しており、セットアップ済みのモデルをすぐにアップロードできます。\n\n※以下にモデルについての利用規約が記載されております。\nご購入の前に必ずお読みいただき、ご了承された上でのご購入をお願いいたします。Boothの仕様上返金対応は致しかねます。\n\n【利用規約】\n本商品を所持した時点で、以下の規約に同意したものとします。\n\n●権利について\n・収録されている3Dモデルデータ及び画像データ(以下本データ)について、権利はつっきーてぃーが有しております。\n\n●使用について\n・商用、非商用を問わず、VRChat及びその他のコンテンツに本データを使用することを許可します。\n・本データを改変して使用する事を許可します。\n・VRChat以外での使用は本データを別途調整していただく必要があります。その際のサポートは行いません。\n・本データのR-18、R-18Gコンテンツでの使用を許可します。\n・本データを使用したことによるいかなる損害の責任もつっきーてぃーは負いません。\n・政治的主張、宗教行為、ヘイトスピーチ、他者への嫌がらせ、その他公序良俗に反する目的での使用を禁じます。\n\n●再配布について\n・VRChatにおけるAvator Pedestal等、他者が本データを使用可能な状態にする事を禁止します。\n・本データをそのままの形で取り出せる状態での再配布を禁じます。\n\n●クレジット表記について\n・本データをVRChat等で3Dアバターとして使用する場合、クレジット表記は不要です。\n・その他の方法で本データを使用する場合は、「つっきーてぃー」とご明記ください。\n\n制定日　2018/08/25\n改定    2020/12/31 ツッキー・Tをつっきーてぃーに変更。\n\n【更新履歴】\n2020/12/31 v1.1.0 マテリアルを削減し軽量化、シェーダーをarktoon shaderに変更。unity2018.4.20fに対応。","url":"https://booth.pm/ja/items/987813","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1500"},"image":"https://booth.pximg.net/c/620x620/1eb19d48-5626-4195-a111-a028c8b98f15/i/987813/c8a6a3ae-9e2a-4548-8fd2-218c0759537d_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5IHIRqnedr5ilaVGfCsqkTX9eV4PMF61U0SAO/Az7jI="></script>
+    nonce="a8iE6ZxiJSuhZAVPaC888ZZk44GUMePi4js5r2FN7o8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/987813/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               33
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/987813/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               33
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
