--- a/VRChat/01/987801.html
+++ b/VRChat/01/987801.html
@@ -76,9 +76,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "WRv1nE75svbxdJ/LL4cJhh5xKhYqox6CMe2ayDy5uxQ="></script>
+    "tPAXSQah7ssFYYxF3jt0KrX8V5DN89LugaB61A3YHQI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"KUKURiオリジナル3Dアバターキャラクター 桜川虎子（TORAKO SAKURAGAWA ver1.0.0 forVRC）＋おまけ forVRM形式","description":"KUKURiオリジナル3Dアバターキャラクター\n桜川虎子（TORAKO SAKURAGAWA ver1.0.0 forVRC）＋おまけ forVRM形式\n","url":"https://booth.pm/ja/items/987801","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2800"},"image":"https://booth.pximg.net/c/620x620/a97a7d82-36d7-4277-a77c-45ad0d0cf840/i/987801/12a22a58-b449-48e8-9990-46575f855d85_base_resized.jpg"}
     </script>
@@ -92,7 +92,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="WRv1nE75svbxdJ/LL4cJhh5xKhYqox6CMe2ayDy5uxQ="></script>
+    nonce="tPAXSQah7ssFYYxF3jt0KrX8V5DN89LugaB61A3YHQI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -116,6 +116,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/987801/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               254
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/987801/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               254
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
